// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> renders 1`] = `
.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

@media (max-width:600px) {
  .c0 {
    padding: 0 1rem;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    One Aside title
  </div>
</div>
`;

exports[`<Container /> renders narrow 1`] = `
.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
}

@media (max-width:600px) {
  .c0 {
    padding: 0 1rem;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    Narrow contained
  </div>
</div>
`;

exports[`<Container /> renders narrow without padding 1`] = `
.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  padding: 0;
  max-width: 74rem;
}

@media (max-width:600px) {
  .c0 {
    padding: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    noPadding prop can only be used with the narrow prop
  </div>
</div>
`;

exports[`<Container /> renders without padding even if the prop is specified, because the narrow prop is not 1`] = `
.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

@media (max-width:600px) {
  .c0 {
    padding: 0 1rem;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    noPadding prop can only be used with the narrow prop
  </div>
</div>
`;
